fix navlink spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -24,12 +24,11 @@ body {
   display: flex;
   justify-content: space-between;
   height: 30px;
-  margin-top: 50px;
-  width: 30%;
+  margin: 50px 30%;
 }
 
 a {
-  color: #;
+  color: #ffffe5;
   text-decoration: none;
 }
 
